# encounter_generator

./: .gitignore  MANIFEST.in  Makefile  example_flaskapp.py  setup.cfg  setup.py
data/: associations.conf  associations.txt  reprs
encounters/: __init__.py  api.py  model.py
encounters/flaskapp/: app.py  util.py
encounters/flaskapp/static/: encounters.js  styles.css
encounters/flaskapp/templates/: base.html  index.html
scripts/: clean.py  generate_associations_config.py  generate_baked_data.py  generate_monster_ids.py  id_to_name.py  model.py  test_python_module.py  util.py
src/: _monster_data.c  _monster_data.h  encounter.c  encounter.h  monster_data.c  monster_data.h  noise.c  noise.h
src/python/: encounters_module.c
