[metadata]
name = encounters
version = 0.0.1
description = generates 5th edition dnd encounters
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeffrey Pepin
url = https://github.com/peffjepin/encounter_generator
license = MIT
license_file = LICENSE
platforms = linux

[options]
packages = 
    encounters
    encounters.flaskapp
include_package_data = yes
zip_safe = no

[options.package_data]
* = data/*
